# Categorizer_App

./: .gitignore  .replit  README.md  app.py  body_heat_map.py  bracket_visualizer.py  data_processor.py  exercise_constants.py  goal_standards.py  matrix_generator.py  matrix_generator.py.backup  pyproject.toml  pyproject_poetry.toml  replit.nix  report_generator.py  requirements.txt  sample_data.py
attached_assets/: Pasted-1-Data-Organization-a-Columns-in-the-Dataset-The-dataset-consists-of-the-following-key-columns--1742478879982.txt
