[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "openai>=1.69.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.1",
    "reportlab>=4.3.1",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
    "weasyprint>=65.0",
]
