[project]
name = "categorizer_app"
version = "0.1.0"
description = "Streamlit app to categorize stuff"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "streamlit>=1.43.2"
]
requires-python = ">=3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = ">=2.2.4"
openpyxl = ">=3.1.5"
pandas = ">=2.2.3"
plotly = ">=6.0.1"
streamlit = ">=1.43.2"
trafilatura = ">=2.0.0"
