[project]
name = "categorizer-app"
version = "0.1.0"
description = "Streamlit app to categorize stuff"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "streamlit>=1.43.2",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "trafilatura>=2.0.0"
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
